--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.2",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "react": "^16.4.2",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1"
   },
