--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "jest": "^23.5.0",
     "jest-enzyme": "^6.0.4",
-    "react-scripts": "1.1.4"
+    "jest-localstorage-mock": "^2.2.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.5.0",
+    "regenerator-runtime": "^0.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,12 +30,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "jest": {
-    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
-    "unmockedModulePathPatterns": [
-      "react",
-      "enzyme",
-      "jest-enzyme"
-    ]
+  "jest":{
+    "setupFiles": ["jest-localstorage-mock", "./src/setupTest.js"],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
